--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   qrscan: ^0.2.17
   sa_stateless_animation: ^1.0.3
   supercharged: ^1.10.0
+  get_it: ^5.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
