--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   sa_stateless_animation: ^1.0.3
   supercharged: ^1.10.0
   get_it: ^5.0.1
+  flutter_xlider: ^3.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
