--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   supercharged: ^1.10.0
   get_it: ^5.0.1
   flutter_xlider: ^3.4.0
+  modal_bottom_sheet: ^0.2.2
+  progress_dialog: ^1.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
