--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   equatable: ^1.2.0
-  overlay_support: ^1.0.5
   carousel_slider: ^2.2.1
   badges: ^1.1.1
   json_annotation: ^3.0.0
@@ -53,6 +52,9 @@ dependencies:
   flutter_xlider: ^3.4.0
   modal_bottom_sheet: ^0.2.2
   progress_dialog: ^1.2.4
+  geocoder: ^0.2.1
+  geolocator: ^6.0.0+4
+  fluttertoast: ^7.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
