--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   geocoder: ^0.2.1
   geolocator: ^6.0.0+4
   fluttertoast: ^7.1.1
+  google_maps_flutter: ^1.0.2
+  google_maps_webservice: ^0.0.18
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
